--- a/notebooks/Story 5 - Validity.ipynb
+++ b/notebooks/Story 5 - Validity.ipynb
@@ -17,9 +17,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "\n",
     "The concept of validity was formulated by Kelly (1927, p. 14) who stated that a test is valid if it measures what it claims to measure. For example a test of intelligence should measure intelligence and not something else (such as memory).\n",
@@ -60,7 +58,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/pedrohserrano/neuroscience/notebooks\r\n"
+      "/Users/pedrohserrano/neuroscience/notebooks\n"
      ]
     }
    ],
@@ -560,9 +558,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "|Source|Accuracy | Specificity | Sensitivity |\n",
     "|:---:|:---:|:---:|:---:|\n",
@@ -578,9 +574,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "The general performance is acceptable, and at some point better than the references, tryying more type of validity is going to make clear the complete validity of the test\n",
     "\n",
@@ -604,7 +598,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.2"
+   "version": "3.5.4"
   }
  },
  "nbformat": 4,
