--- a/notebooks/Story 1 - SDMT Reliability.ipynb
+++ b/notebooks/Story 1 - SDMT Reliability.ipynb
@@ -51,7 +51,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/pedrohserrano/neuroscience/notebooks\r\n"
+      "/Users/pedrohserrano/neuroscience/notebooks\n"
      ]
     }
    ],
@@ -904,9 +904,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "---"
    ]
@@ -1362,9 +1360,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "The MDC, representing the magnitude of change necessary to exceed the measurement\n",
     "the error of two repeated measures at a specified CI was calculated for the 95% CI as:\n",
@@ -1373,9 +1369,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "1.96 is the two-sided tabled z value for the 95% CI and √\n",
     "2 is used to account for the variance\n",
@@ -1690,7 +1684,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.2"
+   "version": "3.5.4"
   }
  },
  "nbformat": 4,
